--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "npx nodemon index.js",
+    "ali": "npx nodemon aliexpress.js",
+    "ebay": "npx nodemon ebay.js"
   },
   "keywords": [],
   "author": "",
