--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "cron": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "install": "^0.13.0",
