--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cron": "^3.1.6",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "mongoose": "^8.2.4",
     "npm": "^10.2.4",
     "pdfjs-dist": "^3.10.111",
     "puppeteer": "^21.2.1",
