--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "puppeteer-extra-plugin-user-preferences": "^2.4.1",
     "random-useragent": "^0.5.0",
+    "selenium-webdriver": "^4.20.0",
     "sqlite3": "^5.1.6",
     "user-agents": "^1.0.1444",
     "uuid": "^9.0.1"
