feat: adding shopee scrapping

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "npx nodemon index.js",
+    "start": "node cron.js",
+    "dev": "npx nodemon cron.js",
     "ali": "npx nodemon aliexpress.js",
     "ebay": "npx nodemon ebay.js"
   },
@@ -16,12 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "chrome-launcher": "^1.1.2",
+    "chrome-remote-interface": "^0.33.2",
     "cron": "^3.1.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "mongoose": "^8.2.4",
     "npm": "^10.2.4",
+    "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.10.111",
     "puppeteer": "^21.2.1",
     "puppeteer-extra": "^3.3.6",
@@ -30,6 +33,7 @@
     "puppeteer-extra-plugin-user-data-dir": "^2.4.1",
     "puppeteer-extra-plugin-user-preferences": "^2.4.1",
     "random-useragent": "^0.5.0",
+    "rimraf": "^6.0.1",
     "selenium-webdriver": "^4.20.0",
     "sqlite3": "^5.1.6",
     "user-agents": "^1.0.1444",
